# BowlingGameKata

./: CMakeLists.txt  README
Source/include/: BowlingGame.h
Source/src/: BowlingGame.cpp  main.cpp
Test/: BowlingGameTest.cpp
